Add projects to nav

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ website:
       - href: talks.qmd
         text: Talks
         icon: megaphone
+      - href: projects/index.qmd
       - href: blog/index.qmd
     tools:
       - icon: github
